--- a/Cluster-achilles.Rmd
+++ b/Cluster-achilles.Rmd
@@ -31,25 +31,46 @@ library("glmGamPoi")
 
 ## Import the data
 
-Read in RDS files after filtering
+Make a list of files
 Remove some samples due to them failing QC
-OMB1250-Ach-MB2
-OMB1284 all samples
+MSK1250-Ach-MB2
+MSK1284 all samples
 
-```{r, echo=FALSE}
+
+```{r}
+
 #make a list of sample files
-file_list <- list.files("C:/Users/wolf1241/OneDrive - Nexus365/scflow/20230118_achilles/RDS_objects.dir/filtered", 
-                        pattern=".rds")
+file_list <- list.files("RDS_objects.dir/filtered", pattern="discard_filtered_SeuratObject.rds")
+names(file_list) <- str_replace(file_list, "_decontX_doublet_discard_filtered_SeuratObject.rds", "")
 
 cat ("File list before sample removal")
 cat ("\n")
-file_list
+names(file_list)
 
-file_list <- file_list[c(-7, -9)]
 
+# create a vector of unwanted files (this could come from the yml file)
+files_to_remove <- c("MSK1250-Ach-MB2", "MSK1284-Ach-Enth")
+
+# get the positions of unwanted files in the list
+positions <- match(files_to_remove, names(file_list))
+
+# remove certain files using those names
+file_list <- file_list[-c(positions)] 
+
+
+cat ("\n")
 cat ("File list after sample removal")
 cat ("\n")
-file_list
+names(file_list)
+
+
+```
+
+
+Read in RDS files after filtering
+
+
+```{r, echo=FALSE}
 
 #Make a new list for the seurat objects
 so <- list()
@@ -57,7 +78,7 @@ so <- list()
 # generate a list of Seurat objects
 for (i in 1:length(file_list)){
     
-    so[[i]] <- readRDS(paste0("C:/Users/wolf1241/OneDrive - Nexus365/scflow/20230118_achilles/RDS_objects.dir/filtered/", file_list[i]))
+    so[[i]] <- readRDS(paste0("RDS_objects.dir/filtered/", file_list[i]))
     #set the project name (should be done in filtering workflow)
     so[[i]]@project.name <- str_replace(file_list[[i]], "_decontX_doublet_discard_filtered_SeuratObject.rds", "")
 }
@@ -74,35 +95,113 @@ Perform the downstream steps with default parameters and using 30 PCs (this will
 
 for (i in 1:length(so)){
     
+    cat ("Analysing sample", i, ":", so[[i]]@project.name)
+    cat ("\n")
+    
+    cat("run SCTransform")
+    
     so[[i]] <- SCTransform(so[[i]],
                            method = "glmGamPoi", #added to increase efficiency
                            vars.to.regress = "percent_mt") %>% 
-      RunPCA() %>% #add reduction.name = "sct.pca" (currently "pca")
-      FindNeighbors(dims = 1:30) %>%
-      RunUMAP(dims = 1:30) %>% # add reduction.name = "sct.umap" (currently "umap")
-      FindClusters()
+        RunPCA(reduction.name = "sct.pca") %>% 
+        FindNeighbors(dims = 1:30, reduction = "sct.pca") %>%
+        RunUMAP(dims = 1:30, reduction = "sct.pca", reduction.name = "sct.umap") %>% 
+        FindClusters(graph.name = "SCT_snn")
     
-    }
+    so[[i]] <- SCTransform(so[[i]],
+                           method = "glmGamPoi", #added to increase efficiency
+                           vars.to.regress = "percent_mt", 
+                           vst.flavor = "v2", 
+                           new.assay.name = "SCTv2") %>% # using SCTransform v2
+        RunPCA(reduction.name = "sctv2.pca") %>% 
+        FindNeighbors(dims = 1:30, reduction = "sctv2.pca") %>%
+        RunUMAP(dims = 1:30, reduction = "sctv2.pca", reduction.name = "sctv2.umap") %>% 
+        FindClusters(graph.name = "SCTv2_snn")
+}
+
+ 
+
+```
+Convert rownames of RNA and SCT assay data slots to unique names
+
+
+```{r, include=FALSE}
+
+for (i in 1:length(so)){
+  
+    #add gene names to SCT assay
+  df <- left_join(data.frame("ensembl_gene_id" = rownames(so[[i]]@assays$SCT@data)), so[[i]]@assays$RNA@meta.features)
+  rownames(so[[i]]@assays$SCT@data) <- df$unique_name
+  rownames(so[[i]]@assays$SCT@counts) <- df$unique_name
+
+  # add gene names to SCTv2 assay
+  df <- left_join(data.frame("ensembl_gene_id" = rownames(so[[i]]@assays$SCTv2@data)), so[[i]]@assays$RNA@meta.features)
+  rownames(so[[i]]@assays$SCTv2@data) <- df$unique_name
+  rownames(so[[i]]@assays$SCTv2@counts) <- df$unique_name
+
+}
 
 ```
 
 
-Plot the variable features following SCTransform
+### Get the top 10 variable genes and label with gene names
+
+```{r, include = FALSE}
+top10_sct <- list()
+top10_sctv2 <- list()
 
 
-```{r, fig.width=8, message=FALSE}
+for (i in 1:length(so)){
+
+  top10_sct[[i]] <- data.frame("ensembl_gene_id" = VariableFeatures(so[[i]], assay = "SCT")[1:10]) %>% 
+    left_join(so_test[[i]]@assays$RNA@meta.features)
+  
+    top10_sctv2[[i]] <- data.frame("ensembl_gene_id" = VariableFeatures(so[[i]], assay = "SCTv2")[1:10]) %>% 
+    left_join(so_test[[i]]@assays$RNA@meta.features)
+  
+  
+  
+}
+
+top10_sct
+top10_sctv2
+```
+
+Plot the variable features following SCTransform and SCTransform v2
+
+
+```{r, fig.width=12, message=FALSE}
 plot_list <- list()
 
 for (i in 1:length(so)){
     
-    plot_list[[i]] <- VariableFeaturePlot(so[[i]])+
-      scale_colour_viridis_d(begin = 0, end = 0.75)+
-      ggtitle(so[[i]]@project.name)
-  
+    
+    p1 <- VariableFeaturePlot(so[[i]], pt.size = 0.2, assay = "SCT")+
+      scale_colour_viridis_d(begin = 0, end = 0.75)
+    
+    p2 <- LabelPoints(plot = p1, points = top10_sct[[i]]$ensembl_gene_id, 
+                      labels = top10_sct[[i]]$unique_name, 
+                      repel = TRUE, xnudge = 0, ynudge = 0)+
+      ggtitle("SCT")
+    
+    p3 <- VariableFeaturePlot(so[[i]], pt.size = 0.2, assay = "SCTv2")+
+      scale_colour_viridis_d(begin = 0, end = 0.75)
+    
+    p4 <- LabelPoints(plot = p1, points = top10_sctv2[[i]]$ensembl_gene_id, 
+                      labels = top10_sctv2[[i]]$unique_name, 
+                      repel = TRUE, xnudge = 0, ynudge = 0)+
+      ggtitle("SCTv2")
+    
+    
+    p5 <- plot_grid(p2, p4, nrow = 1)
+    title <- ggdraw() + draw_label(so[[i]]@project.name, fontface='bold', size = 16)
+    plot_list[[i]] <- plot_grid(title, p5, ncol=1, rel_heights=c(0.1, 1))
+
+
 }
 
-title <- ggdraw() + draw_label("Variable genes following SCT", fontface='bold', size = 24)
-p <- plot_grid(plotlist = plot_list, label_size = 12, ncol = 2)
+title <- ggdraw() + draw_label("Variable genes following SCT/SCTv2", fontface='bold', size = 24)
+p <- plot_grid(plotlist = plot_list, label_size = 12, ncol = 1)
 p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
 
 p
@@ -117,7 +216,7 @@ plot_list <- list()
 
 for (i in 1:length(so)){
     
-    plot_list[[i]] <- ElbowPlot(so[[i]], ndims = 50)+
+    plot_list[[i]] <- ElbowPlot(so[[i]], reduction = "sct.pca", ndims = 50)+
       ggtitle(so[[i]]@project.name)
   
 }
@@ -139,28 +238,7 @@ plot_list <- list()
 
 for (i in 1:length(so)){
     
-    plot_list[[i]] <- DimPlot(so[[i]], reduction = "umap")+
-      ggtitle(so[[i]]@project.name)
-  
-}
-
-title <- ggdraw() + draw_label("Clustering following SCT", fontface='bold', size = 24)
-p <- plot_grid(plotlist = plot_list, label_size = 12, ncol = 2)
-p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
-
-p
-
-
-```
-Plot UMAP with mitochondrial content 
-## not working ##
-
-```{r, fig.width=10, message=FALSE}
-plot_list <- list()
-
-for (i in 1:length(so)){
-    
-    plot_list[[i]] <- DimPlot(so[[i]], reduction = "umap", group.by = "percent_mt")+
+    plot_list[[i]] <- DimPlot(so[[i]], reduction = "sct.umap")+
       ggtitle(so[[i]]@project.name)
   
 }
@@ -175,37 +253,9 @@ p
 ```
 
 
-Convert rownames of SCT assay data slot to unique names
 
 
-```{r}
-#temporarily create a new list
-so_test <- so
 
-for (i in 1:length(so_test)){
-  
-  df <- left_join(data.frame("ensembl_gene_id" = rownames(so_test[[i]]@assays$SCT@data)), so_test[[i]]@assays$RNA@meta.features)
-  
-  rownames(so_test[[i]]@assays$SCT@data) <- df$unique_name
-  rownames(so_test[[i]]@assays$SCT@counts) <- df$unique_name
-
-}
-
-```
-
-
-### Get the top 10 variable genes
-
-```{r}
-top10 <- list()
-
-for (i in 1:length(so_test)){
-
-  top10[[i]] <- data.frame("ensembl_gene_id" = VariableFeatures(so_test[[i]])[1:10]) %>% 
-    left_join(so_test[[i]]@assays$RNA@meta.features)
-}
-
-```
 
 
 Plot the top 10 variable genes on a Vln plot
@@ -243,153 +293,15 @@ p
 ```
 
 
-Up to here Friday 17th Feb
-
-
-```{r}
-so[[1]]@assays$RNA@meta.features %>% head()
-
-so_unfiltered_test <- readRDS("RDS_objects.dir/OMB1250-Ach-MB1_unfiltered_SeuratObject.rds")
-so_unfiltered_test@assays$RNA@meta.features %>% head()
-
-
-```
-
-NB this section can be removed once fixed in QC-1 and re-run
-Access biomaRT to get a mapping of EnsemblIDs to gene names
-
-```{r, echo=FALSE}
-
-# Access the useMart database
-# useMart keeps not working every so often (issue https://github.com/grimbough/biomaRt/issues/31)
-ensembl <- try(useMart("ensembl", dataset = "hsapiens_gene_ensembl"))
-if(class(ensembl) == "try-error"){
-  httr::set_config(httr::config(ssl_verifypeer = FALSE))
-  ensembl <- useMart("ensembl", dataset = "hsapiens_gene_ensembl")
-}
-
-# get a df of ensemble_id vs gene symbol
-mapping <- getBM(attributes = c("ensembl_gene_id", "hgnc_symbol"), mart = ensembl)
-```
-
-### Add gene symbols to the meta.features of the RNA assay
-
-Where no gene symbol is available, leave in the EnsemblID  
-For the Seurat object this has to be added for each assay.  
-For Bioconductor SingleCellExperiment this can be added as rowData.  
-
-
-```{r, echo=FALSE, message = FALSE}
-
-df <- list()
-for(i in 1:length(so)){
-    
-    #make a df with ensemble_id and hgnc_symbol
-    df[[i]] <- data.frame("ensembl_gene_id" = rownames(so[[i]])) %>% 
-        left_join(mapping)
-    
-    
-    #add a column of unique names, remove the "_" from ensembl_ids
-    df[[i]]$unique_name <- uniquifyFeatureNames(df[[i]]$ensembl_gene_id, df[[i]]$hgnc_symbol)
-    df[[i]]$unique_name <- gsub("^_", "", df[[i]]$unique_name)
-    df[[i]] <- df[[i]] %>% distinct(ensembl_gene_id, .keep_all = TRUE) #remove duplicated rows
-    print(head(df[[i]]))
-    
-    #add ensembl_IDs to row names
-    rownames(df[[i]]) <- rownames(so[[i]])
-    
-    #add to the meta.features in the RNA assay
-    so[[i]][["RNA"]]@meta.features <- df[[i]]
-    print(head(so[[i]][["RNA"]]@meta.features))
-    
-}
-
-```
-
-? can we transfer the names from RNA to SCT assay?
-
-Plot variable features
-
-```{r}
-
-
-plot_list <- list()
-
-for (i in 1:length(so)){
-    
-    top10 <- head(VariableFeatures(so[[i]]), 10)
-    
-    plot1 <- VariableFeaturePlot(so[[i]])
-  
-  # label with gene names
-  plot_list[[i]] <- LabelPoints(plot = plot1, points = top10, #labels = top10_genes$hgnc_symbol, 
-                       repel = TRUE, xnudge = 0, ynudge = 0)
-
-  print(plot_list[[i]])
-
-    
-    }
-
-
-```
+Up to here Wed 28th Feb
 
 
 
-Visualise VlnPlots before and afer SCTransform
-
-```{r}
-
-plot_list <- list()
-
-for (i in 1:length(so)) {
-    
-    # do a violin plot
-    plot_list[[i]] <- VlnPlot(so[[i]], c("nCount_RNA", "nCount_SCT"), pt.size = 0)+
-        theme(legend.position="none")
-    print(plot_list[[i]])
-}
-
-```
-
-? Do we need to add gene  names to the SCT assay?
-
-
-Run PCA and do the Elbow plot to check how many dimensions we should use going forward
-
-
-```{r}
-
-plot_list <- list()
-
-for (i in 1:length(so)) {
-    
-    #Calculate PCA
-    so[[i]] <- RunPCA(so[[i]], reduction.name = "sct.pca")
-    
-    #do elbow plot
-    plot_list[[i]] <- ElbowPlot(so[[i]], ndims = 50)
-    print(plot_list[[i]])
-}
 
 
 
-```
-
-Run tSNE and UMAP on the selected number of PCs. 
-Might this be different for different samples?
 
 
-```{r}
-for (i in 1:length(so)) {
-    
-    so[[i]] <- RunUMAP(seurat_after_qc,
-                       reduction = "sct.pca",
-                       dims = 1:20,
-                       reduction.name = "sct.umap")
-    so[[i]] <- RunTSNE()
-    
-}
-```
 
 
 
