--- a/Cluster-achilles.Rmd
+++ b/Cluster-achilles.Rmd
@@ -115,7 +115,8 @@ for (i in 1:length(so)){
 ```
 
 
-### Extract some names that depend on the normalisation method performed
+### Parameters
+Extract some names that depend on the normalisation method performed
 
 ```{r}
 
@@ -163,7 +164,7 @@ Default method is SCTransform, can also update to logNormalise or SCTransform v2
 Perform the downstream steps with default parameters and using 30 PCs (this will be optimised later)
 
 
-```{r}
+```{r, message=FALSE}
 
 for (i in 1:length(so)){
     
@@ -176,8 +177,8 @@ for (i in 1:length(so)){
                            method = "glmGamPoi", #added to increase efficiency
                            vars.to.regress = "percent_mt") %>% 
         RunPCA(reduction.name = "sct.pca") %>% 
-        FindNeighbors(dims = 1:30, reduction = "sct.pca") %>%
-        RunUMAP(dims = 1:30, reduction = "sct.pca", reduction.name = "sct.umap") 
+        FindNeighbors(dims = 1:ini$n_dims, reduction = "sct.pca") %>%
+        RunUMAP(dims = 1:ini$n_dims, reduction = "sct.pca", reduction.name = "sct.umap") 
     
         # add gene names to SCT assay
         df <- left_join(data.frame("ensembl_gene_id" = rownames(so[[i]]@assays$SCT@data)), so[[i]]@assays$RNA@meta.features)
@@ -194,8 +195,8 @@ for (i in 1:length(so)){
                            vst.flavor = "v2", 
                            new.assay.name = "SCTv2") %>% # using SCTransform v2
         RunPCA(reduction.name = "sctv2.pca") %>% 
-        FindNeighbors(dims = 1:30, reduction = "sctv2.pca") %>%
-        RunUMAP(dims = 1:30, reduction = "sctv2.pca", reduction.name = "sctv2.umap") 
+        FindNeighbors(dims = 1:ini$n_dims, reduction = "sctv2.pca") %>%
+        RunUMAP(dims = 1:ini$n_dims, reduction = "sctv2.pca", reduction.name = "sctv2.umap") 
     
       # add gene names to SCTv2 assay
         df <- left_join(data.frame("ensembl_gene_id" = rownames(so[[i]]@assays$SCTv2@data)), so[[i]]@assays$RNA@meta.features)
@@ -210,8 +211,8 @@ for (i in 1:length(so)){
            FindVariableFeatures() %>% 
            ScaleData() %>%
            RunPCA(reduction.name = "lognorm.pca")%>%
-           FindNeighbors(dims = 1:30, reduction = "lognorm.pca") %>%
-           RunUMAP(dims = 1:30, reduction = "lognorm.pca", reduction.name = "lognorm.umap") 
+           FindNeighbors(dims = 1:ini$n_dims, reduction = "lognorm.pca") %>%
+           RunUMAP(dims = 1:ini$n_dims, reduction = "lognorm.pca", reduction.name = "lognorm.umap") 
         
     }
     
@@ -224,8 +225,9 @@ for (i in 1:length(so)){
 
 
 ### Add multiple resolutions of clustering
+Calculate clusters at resolutions 0.1 to 1 with 0.1 intervals.
 
-```{r}
+```{r, message=FALSE}
 
 so <- lapply(so, FindClusters, resolution = seq(0.1, 1, 0.1))
 
@@ -260,7 +262,6 @@ for (i in 1:length(so)){
       scale_colour_viridis_d(begin = 0, end = 0.75)
     
     plot_list[[i]] <- LabelPoints(plot = p1, points = VariableFeatures(so[[i]])[1:10], 
-                      #labels = top10[[i]]$unique_name, 
                       repel = TRUE, xnudge = 0, ynudge = 0)+
         ggtitle(so[[i]]@project.name)
     
@@ -314,8 +315,7 @@ ggsave(paste0("Clustering_Figures.dir/", ini$normalisation_method, "/Elbow_plot.
 ```
 
 
-
-### Plot the clustree
+### Clustree
 
 ```{r, fig.width=12, fig.height=20}
 
@@ -381,9 +381,9 @@ ggsave(paste0("Clustering_Figures.dir/", ini$normalisation_method, "/UMAP_plot."
 
 ```
 
-Feature plot for mitochondrial content
+### Feature plot for mitochondrial content
 
-```{r, fig.width=10, fig.height = 18}
+```{r, fig.width=10, fig.height = 18, message = FALSE}
 
 plot_list <- list()
 
